--- a/src/config/global.css
+++ b/src/config/global.css
@@ -26,6 +26,10 @@ html, body {
     scroll-padding-top: 70px;
 }
 
+a {
+    transition: none;
+}
+
 /* ------------------------------------------------------------------------------ */
 /* ----- Big Tablets & Laptops (990px-1200px) ----- */
 /* ------------------------------------------------------------------------------ */
